# alg

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  flake.nix
include/: hash.h  item.h  list.h
src/: CMakeLists.txt  hash.c  item.c  list.c
test/: CMakeLists.txt  test_hash.c  test_item.c  test_list.c
